--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/logo3"
-        android:layout_width="144dp"
-        android:layout_height="73dp"
+    <ImageButton
+        android:id="@+id/main_button2"
+        android:layout_width="98dp"
+        android:layout_height="90dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:background="@null"
         android:scaleType="fitXY"
-        android:scaleY="2"
+        android:scaleX="1.3"
+        android:scaleY="1.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/easymed" />
 
     <ImageButton
-        android:id="@+id/menu_button"
+        android:id="@+id/menu_button3"
         android:layout_width="61dp"
         android:layout_height="57dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="28dp"
         android:background="@null"
         android:backgroundTint="@null"
+        android:contentDescription="@string/menuButtonDesc"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,14 +38,14 @@
         android:id="@+id/divider13"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="90dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/view"
