--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,7 +10,7 @@
         android:id="@+id/main_button"
         android:layout_width="98dp"
         android:layout_height="90dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:background="@null"
         android:scaleType="fitXY"
         android:scaleX="1.3"
@@ -19,12 +19,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/easymed" />
 
+    <View
+        android:id="@+id/divider_menu_1"
+        android:layout_width="411dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="90dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/menu_button2"
         android:layout_width="61dp"
         android:layout_height="57dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="28dp"
         android:background="@null"
         android:backgroundTint="@null"
         android:contentDescription="@string/menuButtonDesc"
@@ -33,16 +44,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu" />
-
-    <View
-        android:id="@+id/divider_menu_1"
-        android:layout_width="411dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="90dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view_menu_1"
