--- a/app/src/main/res/layout/activity_adicionar_medicamentos.xml
+++ b/app/src/main/res/layout/activity_adicionar_medicamentos.xml
@@ -7,10 +7,24 @@
     tools:context=".Adicionar_Medicamentos">
 
     <ImageButton
+        android:id="@+id/menu_button4"
+        android:layout_width="61dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="20dp"
+        android:background="@null"
+        android:backgroundTint="@null"
+        android:contentDescription="@string/menuButtonDesc"
+        android:hapticFeedbackEnabled="false"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/menu" />
+
+    <ImageButton
         android:id="@+id/back_button"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:adjustViewBounds="false"
         android:background="@null"
@@ -21,30 +35,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/back_button" />
 
-    <ImageButton
-        android:id="@+id/menu_button"
-        android:layout_width="61dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@null"
-        android:backgroundTint="@null"
-        android:hapticFeedbackEnabled="false"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu" />
-
     <View
         android:id="@+id/divider_add_meds_1"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="90dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView_add_meds_1"
