--- a/app/src/main/res/layout/activity_medicamentos.xml
+++ b/app/src/main/res/layout/activity_medicamentos.xml
@@ -26,7 +26,7 @@
         android:layout_width="61dp"
         android:layout_height="57dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="20dp"
         android:background="@null"
         android:backgroundTint="@null"
         android:hapticFeedbackEnabled="false"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:text="@string/medicine_name_2"
         android:textSize="22dp"
-        tools:layout_editor_absoluteX="120dp"
+        tools:layout_editor_absoluteX="144dp"
         tools:layout_editor_absoluteY="238dp" />
 
     <ProgressBar
@@ -58,8 +58,8 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="74dp"
         android:layout_height="29dp"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="265dp" />
+        tools:layout_editor_absoluteX="300dp"
+        tools:layout_editor_absoluteY="283dp" />
 
     <ProgressBar
         android:id="@+id/progressBar6"
@@ -96,7 +96,7 @@
         android:layout_height="65dp"
         android:text="@string/previously_medicine_in_plan"
         android:textAllCaps="false"
-        android:textSize="25dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.403"
         app:layout_constraintStart_toStartOf="parent"
@@ -106,44 +106,60 @@
         android:id="@+id/imageView"
         android:layout_width="82dp"
         android:layout_height="73dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@mipmap/pill"
-        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="158dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
         android:text="@string/medicine_name_1"
         android:textSize="22dp"
-        tools:layout_editor_absoluteX="120dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView9"
         tools:layout_editor_absoluteY="179dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="@string/medicine_in_plan"
-        android:textSize="25dp"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="111dp" />
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider_menu_" />
+
+    <View
+        android:id="@+id/divider_menu_"
+        android:layout_width="411dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="90dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar4"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="74dp"
         android:layout_height="29dp"
-        tools:layout_editor_absoluteX="303dp"
-        tools:layout_editor_absoluteY="202dp" />
+        tools:layout_editor_absoluteX="300dp"
+        tools:layout_editor_absoluteY="209dp" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="179dp" />
+        tools:layout_editor_absoluteY="183dp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -161,6 +177,6 @@
         android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="246dp" />
+        tools:layout_editor_absoluteY="257dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
