--- a/app/src/main/res/layout/activity_medicamentos.xml
+++ b/app/src/main/res/layout/activity_medicamentos.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".Adicionar_Medicamentos">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="82dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:srcCompat="@mipmap/pill" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="82dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:srcCompat="@mipmap/pill" />
+
     <ImageButton
         android:id="@+id/back_button"
         android:layout_width="100dp"
@@ -39,35 +61,44 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="@string/medicine_name_3"
         android:textSize="22dp"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="521dp" />
+        app:layout_constraintEnd_toStartOf="@+id/progressBar6"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:text="@string/medicine_name_2"
         android:textSize="22dp"
-        tools:layout_editor_absoluteX="144dp"
-        tools:layout_editor_absoluteY="238dp" />
+        app:layout_constraintEnd_toStartOf="@+id/progressBar5"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ProgressBar
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="74dp"
         android:layout_height="29dp"
-        tools:layout_editor_absoluteX="300dp"
-        tools:layout_editor_absoluteY="283dp" />
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <ProgressBar
         android:id="@+id/progressBar6"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="74dp"
         android:layout_height="29dp"
-        tools:layout_editor_absoluteX="310dp"
-        tools:layout_editor_absoluteY="521dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <View
         android:id="@+id/divider"
@@ -84,52 +115,55 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="25dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="343dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="354dp"
         android:layout_height="65dp"
+        android:layout_marginTop="20dp"
         android:text="@string/previously_medicine_in_plan"
         android:textAllCaps="false"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.403"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="370dp" />
+        app:layout_constraintTop_toBottomOf="@+id/divider_add_meds_4" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="82dp"
         android:layout_height="73dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@mipmap/pill"
-        tools:layout_editor_absoluteY="158dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:srcCompat="@mipmap/pill" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="40dp"
         android:text="@string/medicine_name_1"
         android:textSize="22dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView9"
-        tools:layout_editor_absoluteY="179dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        tools:layout_editor_absoluteX="165dp" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:text="@string/medicine_in_plan"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintHorizontal_bias="0.201"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider_menu_" />
 
@@ -149,34 +183,44 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="74dp"
         android:layout_height="29dp"
-        tools:layout_editor_absoluteX="300dp"
-        tools:layout_editor_absoluteY="209dp" />
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.446"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="24dp"
         android:text="@string/to_take_taken_medicine"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="183dp" />
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="502dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="257dp" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
