--- a/app/src/main/res/layout/activity_medicamentos.xml
+++ b/app/src/main/res/layout/activity_medicamentos.xml
@@ -10,9 +10,10 @@
         android:id="@+id/imageView3"
         android:layout_width="82dp"
         android:layout_height="73dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.457"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         app:srcCompat="@mipmap/pill" />
@@ -21,9 +22,10 @@
         android:id="@+id/imageView2"
         android:layout_width="82dp"
         android:layout_height="73dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@mipmap/pill" />
@@ -63,6 +65,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/medicine_name_3"
+        android:textColor="@color/black"
         android:textSize="22dp"
         app:layout_constraintEnd_toStartOf="@+id/progressBar6"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
@@ -74,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="@string/medicine_name_2"
+        android:textColor="@color/black"
         android:textSize="22dp"
         app:layout_constraintEnd_toStartOf="@+id/progressBar5"
         app:layout_constraintHorizontal_bias="0.518"
@@ -86,7 +90,7 @@
         android:layout_width="74dp"
         android:layout_height="29dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
@@ -96,7 +100,7 @@
         android:layout_width="74dp"
         android:layout_height="29dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginEnd="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
@@ -129,6 +133,7 @@
         android:layout_marginTop="20dp"
         android:text="@string/previously_medicine_in_plan"
         android:textAllCaps="false"
+        android:textColor="#070707"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -139,8 +144,8 @@
         android:id="@+id/imageView"
         android:layout_width="82dp"
         android:layout_height="73dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:srcCompat="@mipmap/pill" />
@@ -150,10 +155,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
         android:text="@string/medicine_name_1"
+        android:textColor="@color/black"
         android:textSize="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        tools:layout_editor_absoluteX="165dp" />
+        app:layout_constraintEnd_toStartOf="@+id/progressBar4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/textView7"
@@ -161,6 +170,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/medicine_in_plan"
+        android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.201"
@@ -184,9 +194,8 @@
         android:layout_width="74dp"
         android:layout_height="29dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="35dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.446"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
@@ -194,9 +203,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
@@ -206,6 +216,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView13"
@@ -218,6 +229,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:text="@string/to_take_taken_medicine"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView12"
