--- a/app/src/main/res/layout/activity_adicionar_medicamentos.xml
+++ b/app/src/main/res/layout/activity_adicionar_medicamentos.xml
@@ -52,6 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/name_medicine"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider_add_meds_2"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/icon_medicine"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider_add_meds_3"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -95,6 +97,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider_add_meds_2"
         app:layout_constraintVertical_bias="0.476" />
+
+    <View
+        android:id="@+id/change_icon_view"
+        android:layout_width="103dp"
+        android:layout_height="111dp"
+        tools:layout_editor_absoluteX="297dp"
+        tools:layout_editor_absoluteY="218dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -112,6 +121,7 @@
         android:layout_height="19dp"
         android:layout_marginEnd="20dp"
         android:text="@string/change_icon"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/divider_add_meds_3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
@@ -136,6 +146,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/timing_to_take"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider_add_meds_4"
         app:layout_constraintStart_toStartOf="parent"
@@ -172,6 +183,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="@string/take_frequecy"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider_add_meds_5"
         app:layout_constraintStart_toStartOf="parent"
