--- a/app/src/main/res/layout/row_icons_med_items.xml
+++ b/app/src/main/res/layout/row_icons_med_items.xml
@@ -1,38 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
+
     <ImageView
 
-        android:layout_rowSpan="2"
+        android:id="@+id/imageid"
         android:layout_width="80dp"
         android:layout_height="70dp"
 
-        android:scaleType="fitXY"
-        android:id="@+id/imageViewFlag"
         android:layout_row="0"
-        android:layout_column="0" />
+        android:layout_rowSpan="2"
+        android:layout_column="0"
+        android:scaleType="fitXY" />
 
     <TextView
+        android:id="@+id/textView_med_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
-        android:textSize="30dp"
         android:textColor="#1E90FF"
-        android:id="@+id/textViewCountry"
-        android:layout_row="0"
-        android:layout_column="1" />
+        android:textSize="30dp" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:layout_marginLeft="10dp"
-        android:textSize="20dp"
-        android:textColor="#4B0082"
-        android:id="@+id/textViewCapital"
-        android:layout_row="1"
-        android:layout_column="1" />
 </GridLayout>
