fixed some things

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,6 +12,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="20dp"
         android:background="@null"
+        android:contentDescription="@string/logoDescription"
         android:scaleType="fitXY"
         android:scaleX="1.3"
         android:scaleY="1.3"
@@ -60,7 +61,6 @@
         android:id="@+id/home_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:capitalize="none"
         android:clickable="true"
         android:text="@string/home"
         android:textAllCaps="true"
