--- a/app/src/main/res/layout/row_icons_med_items.xml
+++ b/app/src/main/res/layout/row_icons_med_items.xml
@@ -23,7 +23,7 @@
         android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
         android:textColor="#1E90FF"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
 
 </GridLayout>
