--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="20dp"
         android:background="@null"
+        android:contentDescription="@string/logoDescription"
         android:scaleType="fitXY"
         android:scaleX="1.3"
         android:scaleY="1.3"
