-Fixed some string -Fixed some things in settings

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="42dp"
         android:text="@string/white_black"
-        android:textSize="11sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="220dp" />
 
@@ -64,7 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="515dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView20"
@@ -131,7 +131,7 @@
         android:id="@+id/divider2"
         android:layout_width="350dp"
         android:layout_height="1dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -164,7 +164,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:text="@string/portuguese_english"
-        android:textSize="11sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch2" />
 
@@ -237,7 +237,7 @@
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:backgroundTint="@null"
-        android:contentDescription="@string/menuButtonDesc"
+        android:contentDescription="@string/menu_button_descrition"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +249,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:text="@string/ativate_dark_mode"
         android:textColor="@color/black"
         android:textSize="18sp"
