--- a/app/src/main/res/layout/activity_adicionar_medicamentos.xml
+++ b/app/src/main/res/layout/activity_adicionar_medicamentos.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:backgroundTint="@null"
-        android:contentDescription="@string/menuButtonDesc"
+        android:contentDescription="@string/menu_button_descrition"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
