--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="20dp"
         android:background="@null"
-        android:contentDescription="@string/logoDescription"
+        android:contentDescription="@string/logo_description"
         android:scaleType="fitXY"
         android:scaleX="1.3"
         android:scaleY="1.3"
@@ -28,7 +28,7 @@
         android:layout_marginEnd="28dp"
         android:background="@null"
         android:backgroundTint="@null"
-        android:contentDescription="@string/menuButtonDesc"
+        android:contentDescription="@string/menu_button_descrition"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/topViewTitleText"
+        android:text="@string/top_view_title_text"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/view"
