--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,7 +12,7 @@
         android:layout_height="90dp"
         android:layout_marginStart="20dp"
         android:background="@null"
-        android:contentDescription="@string/logoDescription"
+        android:contentDescription="@string/logo_description"
         android:scaleType="fitXY"
         android:scaleX="1.3"
         android:scaleY="1.3"
@@ -39,7 +39,7 @@
         android:layout_marginEnd="20dp"
         android:background="@null"
         android:backgroundTint="@null"
-        android:contentDescription="@string/menuButtonDesc"
+        android:contentDescription="@string/menu_button_descrition"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="@string/medicamentosTitle"
+        android:text="@string/med_title"
         android:textAllCaps="true"
         android:textColor="#000000"
         android:textSize="18sp"
@@ -134,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="@string/addMedsButton"
+        android:text="@string/add_meds_button"
         android:textAllCaps="true"
         android:textColor="#000000"
         android:textSize="18sp"
