-Fixed the crashes

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -64,7 +64,7 @@
         android:clickable="true"
         android:text="@string/home"
         android:textAllCaps="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_1"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_1"
@@ -100,7 +100,7 @@
         android:clickable="true"
         android:text="@string/med_title"
         android:textAllCaps="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_2"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_2"
@@ -136,7 +136,7 @@
         android:clickable="true"
         android:text="@string/add_meds_button"
         android:textAllCaps="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_3"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_3"
@@ -173,7 +173,7 @@
         android:clickable="true"
         android:text="@string/settingsText"
         android:textAllCaps="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_4"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_4"
@@ -211,7 +211,7 @@
         android:clickable="true"
         android:text="@string/about"
         android:textAllCaps="true"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="19sp"
         app:layout_constraintBottom_toBottomOf="@+id/view_menu_5"
         app:layout_constraintEnd_toEndOf="@+id/view_menu_5"
