--- a/app/src/main/res/layout/activity_select_med_icon.xml
+++ b/app/src/main/res/layout/activity_select_med_icon.xml
@@ -35,19 +35,20 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="@string/select_med_icon"
         android:textColor="@color/black"
         android:textSize="22sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="113dp" />
+        app:layout_constraintTop_toBottomOf="@+id/divider_add_meds_"
+        tools:layout_editor_absoluteX="16dp" />
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="-30dp"></ListView>
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="16dp"></ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
