--- a/app/src/main/res/layout/row_icons_med_items.xml
+++ b/app/src/main/res/layout/row_icons_med_items.xml
@@ -17,13 +17,14 @@
     <TextView
         android:id="@+id/textView_med_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
         android:layout_row="0"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_marginLeft="10dp"
+        android:gravity="center_horizontal|center_vertical"
         android:textColor="#1E90FF"
-        android:textSize="30sp" />
+        android:textSize="24sp" />
 
 
 </GridLayout>
