--- a/app/src/main/res/layout/activity_plan_for_day.xml
+++ b/app/src/main/res/layout/activity_plan_for_day.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="@string/select_med_icon"
+        android:text="@string/planforday"
         android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
